force-app/main/default/objects/ilms__Library_Book__c/ilms__Library_Book__c.object-meta.xml
<CustomObject>
    <label>Shared Course</label>
    <nameField>
        <displayFormat>LB{00000}</displayFormat>
        <label>Library Book Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>