force-app/main/default/objects/ilms__Library_Book__c/fields/ilms__Course_Image__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course_Image__c</fullName>
    <formula>ilms__Book__r.ilms__Course_Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Image</label>
    <type>Text</type>
</CustomField>