force-app/main/default/objects/ilms__Library_Book__c/fields/ilms__Library__c.field-meta.xml
<CustomField>
    <fullName>ilms__Library__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Library</label>
    <referenceTo>ilms__Library__c</referenceTo>
    <relationshipName>Library_Books</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>